--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/netflixdb
+server.port=8088
+server.servlet.context-path=/${spring.application.name}/${spring.application.version}
+
+# App info
+spring.application.name=netflix
+spring.application.version=v1
+
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/netflix_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
