--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.application.name=netflix
 spring.application.version=v1
 
 # Database connection
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/netflix_db
 spring.datasource.username=root
 spring.datasource.password=root
