--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/netflix_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Eureka client
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
+# Actuator
+info.app.name=Netflix
+info.app.version=1.0.0
+info.app.description=App to manage series
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=*
